# par_treasure_hunt

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: locations.json  locations_graph.mermaid
src/par_treasure_hunt/: __init__.py  __main__.py
